update my project

--- a/task-manager-backend/.env
+++ b/task-manager-backend/.env
@@ -1,2 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/your_database_name
-// replace with my database name
+MONGO_URI=mongodb://localhost:27017/task_manager   //my_database_name
