update my project

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/task_manager
+JWT_SECRET=6qSBWDFAMkuAWkykBRXc1w
 const mongoose = require('mongoose');
 require('dotenv').config();
 
