--- a/.env
+++ b/.env
@@ -1,13 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/task_manager
-JWT_SECRET=6qSBWDFAMkuAWkykBRXc1w
-const mongoose = require('mongoose');
-require('dotenv').config();
-
-mongoose.set('useNewUrlParser', true);
-mongoose.set('useFindAndModify', false);
-mongoose.set('useCreateIndex', true);
-mongoose.set('useUnifiedTopology', true);
-
-mongoose.connect(process.env.MONGO_URI, { useNewUrlParser: true })
-  .then(() => console.log('Connected to MongoDB'))
-  .catch(err => console.error('Could not connect to MongoDB...', err));
+NODE_ENV=production
+JWT_SECRET="productionsecret"
