--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task-manager-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "The back-end project is focused on creating a server for the TASK MANAGER application.",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
