--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "http-proxy-middleware": "^2.0.6",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
