--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "http-proxy-middleware": "^2.0.6",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "logger": "^0.0.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
